# cf_better_ip

./: .gitignore  Cargo.toml  best_ips.txt  update_ips.py
.github/workflows/: update_ips.yml
src/: main.rs
