[package]
name = "cf_better_ip"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
indicatif = "0.17.8"
rand = "0.8.5"
reqwest = { version = "0.12.4", features = ["json"] }
serde_json = "1.0.117"
tokio = { version = "1", features = ["full"] }
